--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Interactive rating component</title>
 
@@ -30,21 +30,28 @@
 <body>
   <div class="rating-container">
     <div class="inner-container">
-    <h3>How did we do?</h3>
-    <p>Please let us know how we did with your support request. All feedback is appreciated
-      to help us improve our offering!</p>
+      <div id="star-icon">
+        <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z"
+            fill="#FC7614" /></svg>
+      </div>
+      <h3>How did we do?</h3>
+      <p>Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our offering!</p>
 
-    <div class="btns">
-      <button class="btn btn-1">1</button>
-      <button class="btn btn-1">2</button>
-      <button class="btn btn-1">3</button>
-      <button class="btn btn-1">4</button>
-      <button class="btn btn-1">5</button>
+      <div class="btns">
+        <button class="btn btn-1">1</button>
+        <button class="btn btn-1">2</button>
+        <button class="btn btn-1">3</button>
+        <button class="btn btn-1">4</button>
+        <button class="btn btn-1">5</button>
+      </div>
+
+      <button id="submit">Submit</button>
     </div>
-
-    <button class="submit">Submit</button>
   </div>
-</div>
+  </div>
 
 
   <div class="thank-you-container">
